# OrientIA

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  INRIA_AI_ORIENTATION_PROJECT.md  LICENSE  README.md  V1.md  pyproject.toml  requirements.txt
_archive_rewrite_phase3v2_pre_pivot/: test_async_rewriter.py
config/: diverse_prompts_50.yaml
data/: chatgpt_recorded.json  manual_labels.json
docs/: ARCHITECTURE_EXPLICATIVE.md  AUDIT_DATA_QUALITY_2026-04-23.md  AUDIT_DATA_QUALITY_2026-04-24.md  AUDIT_PHASE_0.md  AUDIT_PHASE_0_V5_2026-05-07.md  AUDIT_PHASE_0_V5_2026-05-08.md  AUDIT_PHASE_0_V7_2026-05-08.md  BENCHMARK_PHASE_D_2026-05-11.md  BENCH_GATES.md  CODEBASE_REFERENCE.html  CORPORA_SCHEMA_AUDIT_2026-05-07.md  DATA_INVENTORY_2026-04-26.md  DATA_SCHEMA_V2.md  DECISION_LOG.md  FUTURE_PHASES_2026-05-18.md  GOLDEN_PIPELINE_PLAN.md  HANDOFF_2026-05-06_pipeline_v4-1_phase4_plan.md  HANDOFF_REWRITE_ANNEX_TEXTS.md  LIMITATIONS.md  METHODOLOGY.md  PIPELINE_v4_1_FLAGS.md  SESSION_HANDOFF.md  SESSION_HANDOFF_2026-05-08_VERROUILLAGE.md  SPOT_CHECK_V5_2026-05-08.md  SPOT_CHECK_V5_2026-05-13-post-chantier-c-plus.md  SPOT_CHECK_V5_2026-05-13.md  SPOT_CHECK_V5_2026-05-14-post-q11-fix.md  SPRINT10_RAG_FILTRE_DESIGN.md  SPRINT1_PROFILE_CLARIFIER_VERDICT.md  SPRINT2_QUERY_REFORMULER_VERDICT.md  SPRINT3_FETCH_STAT_AND_LATENCY_VERDICT.md  SPRINT4_AGENT_VS_BASELINE_VERDICT.md  SPRINT5_APPLES_TO_APPLES_VERDICT.md  SPRINT6_VERDICT.md  SPRINT7_VERDICT.md  SPRINT8_WAVE1_VERDICT.md  SPRINT9_ARCHI_VERDICT.md  SPRINT9_DATA_VERDICT.md  SPRINT9_REAUDIT.md  (+53 more)
(+8392 files in other folders)
